added radio questions

--- a/src/public/homepage/css/index.css
+++ b/src/public/homepage/css/index.css
@@ -107,7 +107,7 @@ body {
 }
 
 .div-button {
-    background-color: #D2D4DB;
+    background-color:rgb(210, 212, 219);
     width: 80%;
     height: 22%;
     padding: 5%;
